--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "webpack": "^3.9.1"
   },
   "devDependencies": {
+    "babel-cli": "^6.26.0",
     "babel-eslint": "^7.2.3",
     "babel-jest": "^23.2.0",
     "eslint": "^3.19.0",
@@ -66,5 +67,8 @@
     "graphql": {
       "schema": "./lib/graph/schema.json"
     }
+  },
+  "peerDependencies": {
+    "babel-cli": "^6.5.3"
   }
 }
